--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 </style>
 
 <div class="container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Taylor_Swift_%286966830273%29.jpg"
+    <img src="https://images1.epochhk.com/pictures/236774/271181656_477442847073842_5127292573618346060_n@900x600.jpg"
      width="300" height="200">
     <form action="/main" method="post">
         <p><h2>Welcome to Hugging Face Ethical Test, my name is Thousand Ask. May I know your name? </h2></p>
